tests/baselines/reference/parserErrorRecovery_Block2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2.ts (1 errors) ====
    function f() {
        |
        ~
!!! error TS1129: Statement expected.
        return;
    }